<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<Button 
	    android:id="@+id/button1"
	    android:text="@string/button1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" />
	<Button 
	    android:id="@+id/button2"
	    android:text="@string/button2"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" />"
    <Button 
	    android:id="@+id/button3"
	    android:text="@string/button3"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" />
    <Button 
	    android:id="@+id/button4"
	    android:text="@string/button4"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" />
    <Button 
	    android:id="@+id/button5"
	    android:text="@string/button5"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" />
    <Button 
	    android:id="@+id/button6"
	    android:text="@string/button6"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" />
    <TextView 
        android:id="@+id/msg"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>